--- a/Packages/se.hertzole.unitytoolbox/Runtime/Hertzole.UnityToolbox.asmdef
+++ b/Packages/se.hertzole.unitytoolbox/Runtime/Hertzole.UnityToolbox.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:1a91e603eade47d42a03c9e9f4f5e8b6"
+        "GUID:1a91e603eade47d42a03c9e9f4f5e8b6",
+        "GUID:30817c1a0e6d646d99c048fc403f5979"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -23,6 +24,11 @@
             "name": "com.aurorapunks.aurorascriptablevalues",
             "expression": "",
             "define": "TOOLBOX_SCRIPTABLE_VALUES"
+        },
+        {
+            "name": "com.miragenet.mirage",
+            "expression": "",
+            "define": "TOOLBOX_MIRAGE"
         }
     ],
     "noEngineReferences": false
