--- a/Editor/Hertzole.UnityToolbox.Editor.asmdef
+++ b/Editor/Hertzole.UnityToolbox.Editor.asmdef
@@ -1,15 +1,17 @@
 {
-    "name": "Hertzole.UnityToolbox",
-    "rootNamespace": "Hertzole.UnityToolbox",
+    "name": "Hertzole.UnityToolbox.Editor",
+    "rootNamespace": "Hertzole.UnityToolbox.Editor",
     "references": [
-        "GUID:8e6476e98ca45994095daaac0d388517",
+        "Hertzole.UnityToolbox",
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:1a91e603eade47d42a03c9e9f4f5e8b6",
         "GUID:30817c1a0e6d646d99c048fc403f5979"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
@@ -31,11 +33,6 @@
             "name": "com.miragenet.mirage",
             "expression": "",
             "define": "TOOLBOX_MIRAGE"
-        },
-        {
-            "name": "se.hertzole.cecil-attributes",
-            "expression": "",
-            "define": "TOOLBOX_CECIL_ATTRIBUTES"
         }
     ],
     "noEngineReferences": false
