--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
-    "com.unity.ide.rider": "3.0.17",
+    "com.unity.ide.rider": "3.0.18",
     "com.unity.inputsystem": "1.4.4",
     "com.unity.mathematics": "1.2.6",
-    "com.unity.test-framework": "1.3.1"
+    "com.unity.test-framework": "1.3.2",
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.modules.physics": "1.0.0"
   }
 }
