add: animator parameters

--- a/Packages/se.hertzole.unitytoolbox/Runtime/Hertzole.UnityToolbox.asmdef
+++ b/Packages/se.hertzole.unitytoolbox/Runtime/Hertzole.UnityToolbox.asmdef
@@ -47,6 +47,11 @@
             "name": "com.unity.modules.physics",
             "expression": "",
             "define": "TOOLBOX_PHYSICS_3D"
+        },
+        {
+            "name": "com.unity.modules.animation",
+            "expression": "",
+            "define": "TOOLBOX_ANIMATION"
         }
     ],
     "noEngineReferences": false
