--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.mathematics": "1.2.6",
     "com.unity.test-framework": "1.3.2",
     "com.unity.textmeshpro": "3.0.6",
+    "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.physics": "1.0.0"
   }
 }
