--- a/Runtime/Hertzole.UnityToolbox.asmdef
+++ b/Runtime/Hertzole.UnityToolbox.asmdef
@@ -8,7 +8,9 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:1a91e603eade47d42a03c9e9f4f5e8b6",
         "GUID:30817c1a0e6d646d99c048fc403f5979",
-        "GUID:7c88a4a7926ee5145ad2dfa06f454c67"
+        "GUID:7c88a4a7926ee5145ad2dfa06f454c67",
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:84651a3751eca9349aac36a66bba901b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -52,6 +54,11 @@
             "name": "com.unity.modules.animation",
             "expression": "",
             "define": "TOOLBOX_ANIMATION"
+        },
+        {
+            "name": "com.unity.addressables",
+            "expression": "",
+            "define": "TOOLBOX_ADDRESSABLES"
         }
     ],
     "noEngineReferences": false
