--- a/Packages/se.hertzole.unitytoolbox/Editor/Hertzole.UnityToolbox.Editor.asmdef
+++ b/Packages/se.hertzole.unitytoolbox/Editor/Hertzole.UnityToolbox.Editor.asmdef
@@ -6,6 +6,8 @@
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:1a91e603eade47d42a03c9e9f4f5e8b6",
         "GUID:30817c1a0e6d646d99c048fc403f5979"
     ],
@@ -38,6 +40,11 @@
             "name": "com.unity.modules.animation",
             "expression": "",
             "define": "TOOLBOX_ANIMATION"
+        },
+        {
+            "name": "com.unity.addressables",
+            "expression": "",
+            "define": "TOOLBOX_ADDRESSABLES"
         }
     ],
     "noEngineReferences": false
