--- a/Packages/se.hertzole.unitytoolbox/Runtime/Hertzole.UnityToolbox.asmdef
+++ b/Packages/se.hertzole.unitytoolbox/Runtime/Hertzole.UnityToolbox.asmdef
@@ -10,7 +10,8 @@
         "GUID:30817c1a0e6d646d99c048fc403f5979",
         "GUID:7c88a4a7926ee5145ad2dfa06f454c67",
         "GUID:9e24947de15b9834991c9d8411ea37cf",
-        "GUID:84651a3751eca9349aac36a66bba901b"
+        "GUID:84651a3751eca9349aac36a66bba901b",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -59,6 +60,11 @@
             "name": "com.unity.addressables",
             "expression": "",
             "define": "TOOLBOX_ADDRESSABLES"
+        },
+        {
+            "name": "com.cysharp.unitask",
+            "expression": "",
+            "define": "TOOLBOX_UNITASK"
         }
     ],
     "noEngineReferences": false
