--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,9 +7,10 @@
     "com.unity.mathematics": "1.2.6",
     "com.unity.test-framework": "1.3.7",
     "com.unity.textmeshpro": "3.0.6",
+    "se.hertzole.scriptable-values": "1.2.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.physics": "1.0.0",
-    "se.hertzole.scriptable-values": "1.2.0"
+    "com.unity.modules.physics2d": "1.0.0"
   },
   "scopedRegistries": [
     {
