--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
           filters: |
             workflows:
               - 'Generator/**'
+              - '.github/workflows/**'
 
       - name: Cache Library
         uses: actions/cache@v3.0.11
