--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,11 @@ jobs:
           curl -sL https://deb.nodesource.com/setup_14.x | bash -
           apt-get install -y nodejs
 
+      - name: Update Git
+        run: |
+            apt-get update -y
+            apt-get install -y git-all
+
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
