--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,15 @@ jobs:
           curl -sL https://deb.nodesource.com/setup_14.x | bash -
           apt-get install -y nodejs
 
-      - uses: actions/checkout@v2
+      - name: Update Git
+        run: |
+            apt-get update -y
+            apt-get install software-properties-common -y
+            add-apt-repository ppa:git-core/ppa
+            apt-get update -y
+            apt-get install -y git
+
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
           lfs: true
@@ -91,7 +99,15 @@ jobs:
           curl -sL https://deb.nodesource.com/setup_14.x | bash -
           apt-get install -y nodejs
 
-      - uses: actions/checkout@v2
+      - name: Update Git
+        run: |
+            apt-get update -y
+            apt-get install software-properties-common -y
+            add-apt-repository ppa:git-core/ppa
+            apt-get update -y
+            apt-get install -y git
+
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
