--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.cysharp.slnmerge": "https://github.com/Cysharp/SlnMerge.git?path=src",
     "com.unity.addressables": "1.21.14",
     "com.unity.ide.rider": "3.0.24",
+    "com.unity.ide.visualstudio": "2.0.20",
     "com.unity.inputsystem": "1.6.3",
     "com.unity.mathematics": "1.2.6",
     "com.unity.test-framework": "1.3.7",
