and run the workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ on:
       - 'Assets/**'
       - 'Packages/**'
       - '.github/workflows/**'
+      - '.releaserc.yml'
 
 env:
       UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
