--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,6 +138,20 @@ jobs:
           unity-editor -nographics -logFile /dev/stdout -manualLicenseFile License.ulf -quit 
           unity-editor -nographics -logFile /dev/stdout -customBuildName unity-toolbox -projectPath . -executeMethod GitTools.Solution.Sync -quit
 
+      - name: Install .NET
+        uses: actions/setup-dotnet@v2.1.0
+        if: steps.filter.outputs.workflows == 'true'
+        with:
+          dotnet-version: |
+            7.x
+
+      - name: Build Generator
+        if: steps.filter.outputs.workflows == 'true'
+        run: |
+          cd Generator
+          dotnet publish -c Release -o ../GeneratorBuild
+          cd ..
+
       - name: Run Play Mode Tests
         run: unity-editor -nographics -logFile /dev/stdout -runTests -testPlatform playmode -testResults Tests/playmode.xml -enableCodeCoverage -coverageResultsPath TestCoverage -debugCodeOptimization -coverageOptions "generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+Hertzole.UnityToolbox"
 
