--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -200,7 +200,7 @@ jobs:
       - name: Create Release Tag
         if: steps.semantic.outputs.new_release_published == 'true'
         run: |
-          git tag $TAG upm
+          git tag $TAG package
           git push origin --tags
         env:
-          TAG: upm/v${{ steps.semantic.outputs.new_release_version }}
+          TAG: package/v${{ steps.semantic.outputs.new_release_version }}
