--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -175,9 +175,10 @@ jobs:
           if [[ -d "README.md" ]]; then
             mv README.md /tmp/README.md
           fi
+          mv Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Generator.dll /tmp/Generator.dll
           git checkout package
-          mkdir "Samples~"
           if [[ -d "/tmp/example" ]]; then
+            mkdir "Samples~"
             mv /tmp/example/* "Samples~/"
             git add "Samples~"
           fi
@@ -189,6 +190,7 @@ jobs:
             rm -rf Tests
             rm -f Tests.meta
           fi
+          mv /tmp/Generator.dll Plugins/Hertzole.UnityToolbox.Generator.dll 
           git config --global user.name 'github-bot'
           git config --global user.email 'github-bot@users.noreply.github.com'
           git commit -am "Packaged project"
