--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,20 @@ jobs:
           restore-keys: |
             LibraryFolder
 
+      - name: Install .NET
+        uses: actions/setup-dotnet@v2.1.0
+        if: steps.filter.outputs.workflows == 'true'
+        with:
+          dotnet-version: |
+            7.x
+
+      - name: Build Generator
+        if: steps.filter.outputs.workflows == 'true'
+        run: |
+          cd Generator
+          dotnet publish -c Release -o ../GeneratorBuild
+          cd ..
+
       - name: Setup Unity
         if: steps.filter.outputs.workflows == 'true'
         continue-on-error: true
@@ -69,25 +83,15 @@ jobs:
           unity-editor -nographics -logFile /dev/stdout -manualLicenseFile License.ulf -quit 
           unity-editor -nographics -logFile /dev/stdout -customBuildName unity-toolbox -projectPath . -executeMethod GitTools.Solution.Sync -quit
 
-      - name: Install .NET
-        uses: actions/setup-dotnet@v2.1.0
-        if: steps.filter.outputs.workflows == 'true'
-        with:
-          dotnet-version: |
-            7.x
-
       - name: Test Generator
         if: steps.filter.outputs.workflows == 'true'
         run: |
           cd Generator
           dotnet test
 
-      - name: Build Generator
+      - name: Update Generator
         if: steps.filter.outputs.workflows == 'true'
         run: |
-          cd Generator
-          dotnet publish -c Release -o ../GeneratorBuild
-          cd ..
           git config --global user.name 'github-bot'
           git config --global user.email 'github-bot@users.noreply.github.com'
           git add Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Generator.dll
