refactor: moved input callback analyzer/fixer to Analyzers assembly

--- a/Generator/Hertzole.UnityToolbox.Analyzers/Hertzole.UnityToolbox.Analyzers.csproj
+++ b/Generator/Hertzole.UnityToolbox.Analyzers/Hertzole.UnityToolbox.Analyzers.csproj
@@ -41,6 +41,12 @@
       <ProjectReference Include="..\Hertzole.UnityToolbox.Shared\Hertzole.UnityToolbox.Shared.csproj" />
     </ItemGroup>
 
+
+
+    <ItemGroup>
+      <Folder Include="Data\" />
+    </ItemGroup>
+
     <Target Name="CopyDLLs" AfterTargets="Build">
         <Message Text="Executing CopyDLLs task" Importance="High"/>
 
