refactor: moved subscribe methods analyzer/fixer to Analyzers assembly

--- a/Generator/Hertzole.UnityToolbox.Generator/Hertzole.UnityToolbox.Generator.csproj
+++ b/Generator/Hertzole.UnityToolbox.Generator/Hertzole.UnityToolbox.Generator.csproj
@@ -28,6 +28,10 @@
     </ItemGroup>
 
 
+    <ItemGroup>
+      <Folder Include="Helpers\" />
+    </ItemGroup>
+
     <Target Name="CopyDLLs" AfterTargets="Build">
         <Message Text="Executing CopyDLLs task" Importance="High"/>
 
