--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -147,6 +147,8 @@ jobs:
           git config --global user.name 'github-bot'
           git config --global user.email 'github-bot@users.noreply.github.com'
           git add Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Generator.dll
+          git add Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Analyzers.dll
+          git add Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Shared.dll
 
       - name: Run Play Mode Tests
         run: unity-editor -nographics -logFile /dev/stdout -runTests -testPlatform playmode -testResults Tests/playmode.xml -enableCodeCoverage -coverageResultsPath TestCoverage -debugCodeOptimization -coverageOptions "generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+Hertzole.UnityToolbox"
@@ -174,6 +176,8 @@ jobs:
             mv README.md /tmp/README.md
           fi
           mv Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Generator.dll /tmp/Generator.dll
+          mv Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Analyzers.dll /tmp/Analyzers.dll
+          mv Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Shared.dll /tmp/Shared.dll
           git checkout package
           if [[ -d "/tmp/example" ]]; then
             mkdir "Samples~"
@@ -189,6 +193,8 @@ jobs:
             rm -f Tests.meta
           fi
           mv /tmp/Generator.dll Plugins/Hertzole.UnityToolbox.Generator.dll 
+          mv /tmp/Analyzers.dll Plugins/Hertzole.UnityToolbox.Analyzers.dll 
+          mv /tmp/Shared.dll Plugins/Hertzole.UnityToolbox.Shared.dll 
           git config --global user.name 'github-bot'
           git config --global user.email 'github-bot@users.noreply.github.com'
           git commit -am "Packaged project"
