--- a/Packages/se.hertzole.unitytoolbox/Runtime/Hertzole.UnityToolbox.asmdef
+++ b/Packages/se.hertzole.unitytoolbox/Runtime/Hertzole.UnityToolbox.asmdef
@@ -3,6 +3,8 @@
     "rootNamespace": "Hertzole.UnityToolbox",
     "references": [
         "GUID:8e6476e98ca45994095daaac0d388517",
+        "GUID:2665a8d13d1b3f18800f46e256720795",
+        "GUID:e0cd26848372d4e5c891c569017e11f1",
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
@@ -16,7 +18,7 @@
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
-    "allowUnsafeCode": false,
+    "allowUnsafeCode": true,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
@@ -76,6 +78,16 @@
             "name": "com.unity.ai.navigation",
             "expression": "",
             "define": "TOOLBOX_NAVIGATION"
+        },
+        {
+            "name": "com.unity.burst",
+            "expression": "",
+            "define": "TOOLBOX_BURST"
+        },
+        {
+            "name": "com.unity.collections",
+            "expression": "",
+            "define": "TOOLBOX_COLLECTIONS"
         }
     ],
     "noEngineReferences": false
