--- a/Packages/se.hertzole.unitytoolbox/package.json
+++ b/Packages/se.hertzole.unitytoolbox/package.json
@@ -5,6 +5,7 @@
     "description": "A collection of useful tools and extensions for Unity games.",
     "unity": "2022.2",
     "unityRelease": "0f1",
+    "changelogUrl": "https://github.com/Hertzole/unity-toolbox/blob/master/Packages/se.hertzole.unitytoolbox/CHANGELOG.md",
     "dependencies": {
         "com.unity.mathematics": "1.2.6"
     },
