--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
     "com.cysharp.slnmerge": "https://github.com/Cysharp/SlnMerge.git?path=src",
-    "com.unity.burst": "1.8.9",
-    "com.unity.collections": "1.2.4",
+    "com.unity.addressables": "1.21.19",
+    "com.unity.collections": "2.3.0-pre.3",
     "com.unity.ide.rider": "3.0.26",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.mathematics": "1.2.6",
     "com.unity.test-framework": "1.3.9",
-    "com.unity.textmeshpro": "3.0.6",
     "se.hertzole.scriptable-values": "1.2.0",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.physics": "1.0.0",
     "com.unity.modules.physics2d": "1.0.0"
