test: better AddressableLoadGenerator tests

--- a/Generator/Hertzole.UnityToolbox.Generator.Tests/Hertzole.UnityToolbox.Generator.Tests.csproj
+++ b/Generator/Hertzole.UnityToolbox.Generator.Tests/Hertzole.UnityToolbox.Generator.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
@@ -10,6 +10,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="coverlet.collector" Version="6.0.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing.XUnit" Version="1.1.1"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.2"/>
         <PackageReference Include="xunit" Version="2.4.2"/>
@@ -22,6 +26,5 @@
     <ItemGroup>
         <ProjectReference Include="..\Hertzole.UnityToolbox.Generator\Hertzole.UnityToolbox.Generator.csproj"/>
     </ItemGroup>
-
 
 </Project>
