--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -137,10 +137,11 @@ jobs:
           echo "PACKAGE!"
           ls Packages/se.hertzole.unitytoolbox
           echo "PLUGINS!"
-          ls Packages/se.hertzole.unitytoolbox/Plugins
-          mv Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Generator.dll /tmp/Generator.dll
-          mv Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Analyzers.dll /tmp/Analyzers.dll
-          mv Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Shared.dll /tmp/Shared.dll
+          git branch
+          ls -l Packages/se.hertzole.unitytoolbox/Plugins
+          mv ./Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Generator.dll /tmp/Generator.dll
+          mv ./Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Analyzers.dll /tmp/Analyzers.dll
+          mv ./Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Shared.dll /tmp/Shared.dll
           git checkout package
           if [[ -d "/tmp/example" ]]; then
             mkdir "Samples~"
@@ -155,12 +156,12 @@ jobs:
             rm -rf Tests
             rm -f Tests.meta
           fi
-          mv /tmp/Generator.dll Plugins/Hertzole.UnityToolbox.Generator.dll 
-          mv /tmp/Analyzers.dll Plugins/Hertzole.UnityToolbox.Analyzers.dll 
-          mv /tmp/Shared.dll Plugins/Hertzole.UnityToolbox.Shared.dll 
-          git add Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Generator.dll
-          git add Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Analyzers.dll
-          git add Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Shared.dll
+          mv /tmp/Generator.dll ./Plugins/Hertzole.UnityToolbox.Generator.dll 
+          mv /tmp/Analyzers.dll ./Plugins/Hertzole.UnityToolbox.Analyzers.dll 
+          mv /tmp/Shared.dll ./Plugins/Hertzole.UnityToolbox.Shared.dll 
+          git add ./Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Generator.dll
+          git add ./Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Analyzers.dll
+          git add ./Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Shared.dll
           git config --global user.name 'github-bot'
           git config --global user.email 'github-bot@users.noreply.github.com'
           git commit -am "Packaged project"
