--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -159,9 +159,9 @@ jobs:
           mv /tmp/Generator.dll ./Plugins/Hertzole.UnityToolbox.Generator.dll 
           mv /tmp/Analyzers.dll ./Plugins/Hertzole.UnityToolbox.Analyzers.dll 
           mv /tmp/Shared.dll ./Plugins/Hertzole.UnityToolbox.Shared.dll 
-          git add ./Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Generator.dll
-          git add ./Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Analyzers.dll
-          git add ./Packages/se.hertzole.unitytoolbox/Plugins/Hertzole.UnityToolbox.Shared.dll
+          git add Plugins/Hertzole.UnityToolbox.Generator.dll
+          git add Plugins/Hertzole.UnityToolbox.Analyzers.dll
+          git add Plugins/Hertzole.UnityToolbox.Shared.dll
           git config --global user.name 'github-bot'
           git config --global user.email 'github-bot@users.noreply.github.com'
           git commit -am "Packaged project"
