--- a/Generator/Hertzole.UnityToolbox.Analyzers/Hertzole.UnityToolbox.Analyzers.csproj
+++ b/Generator/Hertzole.UnityToolbox.Analyzers/Hertzole.UnityToolbox.Analyzers.csproj
@@ -9,10 +9,15 @@
         <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
         <IsRoslynComponent>true</IsRoslynComponent>
 
-
         <PackageId>Hertzole.UnityToolbox.Analyzers</PackageId>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <AssemblyVersion>1.0.0.0</AssemblyVersion>
+        <Version>1.0.0.0</Version>
+        <ProductVersion>1.0.0.0</ProductVersion>
+    </PropertyGroup>
+    
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4">
             <PrivateAssets>all</PrivateAssets>
