--- a/Generator/Hertzole.UnityToolbox.Generator/Hertzole.UnityToolbox.Generator.csproj
+++ b/Generator/Hertzole.UnityToolbox.Generator/Hertzole.UnityToolbox.Generator.csproj
@@ -14,6 +14,12 @@
         <PackageId>Hertzole.UnityToolbox.Generator</PackageId>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <AssemblyVersion>1.0.0.0</AssemblyVersion>
+        <Version>1.0.0.0</Version>
+        <ProductVersion>1.0.0.0</ProductVersion>
+    </PropertyGroup>
+    
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3">
             <PrivateAssets>all</PrivateAssets>
