--- a/Generator/Hertzole.UnityToolbox.Shared/Hertzole.UnityToolbox.Shared.csproj
+++ b/Generator/Hertzole.UnityToolbox.Shared/Hertzole.UnityToolbox.Shared.csproj
@@ -6,6 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     
+    <PropertyGroup>
+        <AssemblyVersion>1.0.0.0</AssemblyVersion>
+        <Version>1.0.0.0</Version>
+        <ProductVersion>1.0.0.0</ProductVersion>
+    </PropertyGroup>
+    
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3">
             <PrivateAssets>all</PrivateAssets>
