--- a/.releaserc.json
+++ b/.releaserc.json
@@ -21,7 +21,9 @@
               "assets": [
                   "**/*.csproj",
                   "**/*.cs",
-                  "Packages/se.hertzole.unitytoolbox/CHANGELOG.md"
+                  "Packages/se.hertzole.unitytoolbox/CHANGELOG.md",
+                  "Packages/se.hertzole.unitytoolbox/Plugins/*.dll",
+                  "Packages/se.hertzole.unitytoolbox/Plugins/*.dll.meta"
               ]
           }
       ]
