--- a/.releaserc.json
+++ b/.releaserc.json
@@ -20,10 +20,9 @@
           {
               "assets": [
                   "Generator/**/*.csproj",
-                  "Packages/se.hertzole.unitytoolbox/**/*.cs",
+                  "Packages/se.hertzole.unitytoolbox/**/AssemblyInfo.cs",
                   "Packages/se.hertzole.unitytoolbox/CHANGELOG.md",
-                  "Packages/se.hertzole.unitytoolbox/Plugins/*.dll",
-                  "Packages/se.hertzole.unitytoolbox/Plugins/*.dll.meta"
+                  "Packages/se.hertzole.unitytoolbox/Plugins/*.dll"
               ]
           }
       ]
