fix: unity package not being updated along the release

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -22,7 +22,8 @@
                   "Generator/**/*.csproj",
                   "Packages/se.hertzole.unitytoolbox/**/AssemblyInfo.cs",
                   "Packages/se.hertzole.unitytoolbox/CHANGELOG.md",
-                  "Packages/se.hertzole.unitytoolbox/Plugins/*.dll"
+                  "Packages/se.hertzole.unitytoolbox/Plugins/*.dll",
+                  "Packages/se.hertzole.unitytoolbox/package.json"
               ]
           }
       ]
