fix: support for scriptable values 2.0

--- a/Packages/se.hertzole.unitytoolbox/Runtime/Hertzole.UnityToolbox.asmdef
+++ b/Packages/se.hertzole.unitytoolbox/Runtime/Hertzole.UnityToolbox.asmdef
@@ -95,6 +95,10 @@
             "name": "com.unity.collections",
             "expression": "2.0.0",
             "define": "TOOLBOX_COLLECTIONS_2"
+        {
+            "name": "se.hertzole.scriptable-values",
+            "expression": "2",
+            "define": "TOOLBOX_SCRIPTABLE_VALUES_2"
         }
     ],
     "noEngineReferences": false
